--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -1,3 +1,32 @@
 .logo, .setIcon{
     filter: invert(100%); 
 }
+.contentHome{
+    width: 100vw;
+    height: 100vh;
+}
+.photo{
+    width: 80vw;
+    height: 50vh;
+}
+
+
+@media (max-width: 480px) {
+    
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+    .photo{
+        width: 60vw;
+        height: 50vh;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    
+  
+}
+
+@media (min-width: 1025px) and (max-width: 1220px) {
+   
+}
