ajustan todos los breakpoints de css para compatibilidad con mayor numero de pantallas

--- a/src/Style.css
+++ b/src/Style.css
@@ -7,3 +7,8 @@
     --sixth: #e9d7ba;
     --text: #000000;
 }
+.contGlobal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
