--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -1,32 +1,156 @@
 .logo, .setIcon{
     filter: invert(100%); 
 }
-.contentHome{
-    width: 100vw;
-    height: 100vh;
+.contentPersonalInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .photo{
     width: 80vw;
     height: 50vh;
+    border-radius: 10%;
+    margin: 1rem 0 1rem 0;
+    border: 3px solid white;
 }
-
+#name{ margin-top: 1rem ; font-size:2rem; }
+#profession{font-size: 1.8rem; text-align: center;}
+.contentDescription{ width: 80vw; margin-top:1rem;}
+#description{text-align: justify;}
+.contentNetworks{}
+.btnHv{}
 
 @media (max-width: 480px) {
-    
-}
-
-@media (min-width: 481px) and (max-width: 768px) {
-    .photo{
-        width: 60vw;
-        height: 50vh;
+    #name{ font-size:1.7rem; text-align: center;}
+    #profession{font-size: 1.5rem; text-align: center;}
+    .contentHome{
+        width: 100vw;
+        height: 150vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
-    
-  
+@media (min-width: 481px) and (max-width: 767px) {
+    .contentHome{
+        width: 90vw;
+        height: 65vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .photo{
+        width: 40vw;
+        height: 35vh;
+    }
+}
+@media (min-width: 768px) and (max-width: 799px) {
+    .contentHome{
+        width: 90vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .contentInfo{
+        width: 90vw;
+        display: flex;
+        justify-content: space-around;
+        & .contentDescription{ width: 40vw;}
+    }
+    .photo{
+        width: 38vw;
+        height: 32vh;
+        border: 3px solid white;
+        border-radius: 10%;
+        margin-top: 1rem;
+    }
+}
+@media (min-width: 800px) and (max-width: 899px) {
+    .contentHome{
+        width: 90vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contentInfo{
+        width: 90vw;
+        display: flex;
+        justify-content: space-evenly;
+        & .contentDescription{ 
+            width: 40vw;
+        }
+    }
+    .photo{
+        width: 35vw;
+        height: 26vh;
+    }
+}
+@media (min-width: 900px) and (max-width: 1024px) {
+    .contentHome{
+        width: 90vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contentInfo{
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & .contentDescription{width: 70vw;}
+    }
+    .photo{
+        width: 45vw;
+        height: 31vh;
+    }
 }
 
-@media (min-width: 1025px) and (max-width: 1220px) {
-   
+@media (min-width: 1025px) and (max-width: 1440px) {
+    .contentHome{
+        width: 90vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contentInfo{
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & .contentDescription{width: 60vw;}
+    }
+    .photo{
+        width: 30vw;
+        height: 55vh;
+    }
+}
+@media (min-width: 1441px) and (max-width: 1920px) {
+    .contentHome{
+        width: 90vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contentInfo{
+        width: 90vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & .contentDescription{width: 60vw;}
+    }
+    .contentDescription{ width: 40vw; height: 30vh;}
+    .photo{
+        width: 25vw;
+        height: 55vh;
+    }
 }
