--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -17,8 +17,8 @@
 #profession{font-size: 1.8rem; text-align: center;}
 .contentDescription{ width: 80vw; margin-top:1rem;}
 #description{text-align: justify;}
-.contentNetworks{}
-.btnHv{}
+
+/*.btnHv{} */
 
 @media (max-width: 480px) {
     #name{ font-size:1.7rem; text-align: center;}
@@ -30,6 +30,20 @@
         flex-direction: column;
         align-items: center;
     }
+    .contentNetwork{
+        right: 0px;
+        & .socialMedia{
+            width: 30px;
+            height: 30px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 30px;
+        height: 30px;
+        margin-bottom: .5rem;
+    }
+    
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -67,6 +81,19 @@
         border-radius: 10%;
         margin-top: 1rem;
     }
+    .contentNetwork{
+        right: 0px;
+        & .socialMedia{
+            width: 40px;
+            height: 40px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 40px;
+        height: 40px;
+        margin-bottom: .5rem;
+    }
 }
 @media (min-width: 800px) and (max-width: 899px) {
     .contentHome{
@@ -88,6 +115,19 @@
         width: 35vw;
         height: 26vh;
     }
+    .contentNetwork{
+        right: 10px;
+        & .socialMedia{
+            width: 40px;
+            height: 40px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 40px;
+        height: 40px;
+        margin-bottom: .5rem;
+    }
 }
 @media (min-width: 900px) and (max-width: 1024px) {
     .contentHome{
@@ -108,6 +148,19 @@
     .photo{
         width: 45vw;
         height: 31vh;
+    }
+    .contentNetwork{
+        right: 10px;
+        & .socialMedia{
+            width: 40px;
+            height: 40px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 40px;
+        height: 40px;
+        margin-bottom: .5rem;
     }
 }
 
@@ -131,6 +184,19 @@
         width: 30vw;
         height: 55vh;
     }
+    .contentNetwork{
+        right: 10px;
+        & .socialMedia{
+            width: 50px;
+            height: 50px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 50px;
+        height: 50px;
+        margin-bottom: .5rem;
+    }
 }
 @media (min-width: 1441px) and (max-width: 1920px) {
     .contentHome{
@@ -152,5 +218,18 @@
     .photo{
         width: 25vw;
         height: 55vh;
+    }
+    .contentNetwork{
+        right: 10px;
+        & .socialMedia{
+            width: 50px;
+            height: 50px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 50px;
+        height: 50px;
+        margin-bottom: .5rem;
     }
 }
