--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -13,19 +13,54 @@
     margin: 1rem 0 1rem 0;
     border: 3px solid white;
 }
+#description{text-align: justify;}
 #name{ margin-top: 1rem ; font-size:2rem; }
 #profession{font-size: 1.8rem; text-align: center;}
 .contentDescription{ width: 80vw; margin-top:1rem;}
-#description{text-align: justify;}
+.contentNetwork{
+    display: flex;
+    flex-direction: column;
+}
+.image-container {
+    position: relative;
+    display: inline-block;
+  }
+.image-name {
+    position: absolute;
+    top: 50%;
+    right: calc(100% + 10px); 
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+.socialLink:hover + .image-name {
+    opacity: 1;
+  }
 
-/*.btnHv{} */
+.contentAboutMe{
+    margin-top: 2rem;
+    width: 90vw;
+    display: flex;
+    justify-content: center;
+    & .ContentAbout{
+        width: 35vw;
+    }
+    & .imgDevelop{
+        width: 35vw;
+    }
+}
+
 
 @media (max-width: 480px) {
     #name{ font-size:1.7rem; text-align: center;}
     #profession{font-size: 1.5rem; text-align: center;}
     .contentHome{
         width: 100vw;
-        height: 150vh;
+        height: 105vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -43,20 +78,20 @@
         height: 30px;
         margin-bottom: .5rem;
     }
-    
-}
-
-@media (min-width: 481px) and (max-width: 767px) {
-    .contentHome{
-        width: 90vw;
-        height: 65vh;
+    .contentAboutMe{
+        margin-top: 2rem;
+        width: 100vw;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
-    }
-    .photo{
-        width: 40vw;
-        height: 35vh;
+        & .ContentAbout{
+            width: 80vw;
+            margin-top: 1rem;
+        }
+        & .imgDevelop{
+            width: 80vw;
+        }
     }
 }
 @media (min-width: 768px) and (max-width: 799px) {
@@ -94,6 +129,21 @@
         height: 40px;
         margin-bottom: .5rem;
     }
+    .contentAboutMe{
+        margin-top: 2rem;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & .ContentAbout{
+            width: 40vw;
+            margin-top: 1rem;
+        }
+        & .imgDevelop{
+            width: 45vw;
+            height: 40vh;
+        }
+    }
 }
 @media (min-width: 800px) and (max-width: 899px) {
     .contentHome{
@@ -127,6 +177,21 @@
         width: 40px;
         height: 40px;
         margin-bottom: .5rem;
+    }
+    .contentAboutMe{
+        margin-top: 2rem;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & .ContentAbout{
+            width: 40vw;
+            margin-top: 1rem;
+        }
+        & .imgDevelop{
+            width: 40vw;
+            height: 40vh;
+        }
     }
 }
 @media (min-width: 900px) and (max-width: 1024px) {
@@ -167,7 +232,7 @@
 @media (min-width: 1025px) and (max-width: 1440px) {
     .contentHome{
         width: 90vw;
-        height: 100vh;
+        height: 90vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -178,7 +243,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        & .contentDescription{width: 60vw;}
+        & .contentDescription{width: 65vw;}
     }
     .photo{
         width: 30vw;
@@ -197,11 +262,26 @@
         height: 50px;
         margin-bottom: .5rem;
     }
+    .contentAboutMe{
+        margin-top: 2rem;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & .ContentAbout{
+            width: 35vw;
+            margin-top: 1rem;
+        }
+        & .imgDevelop{
+            width: 30vw;
+            height: 40vh;
+        }
+    }
 }
 @media (min-width: 1441px) and (max-width: 1920px) {
     .contentHome{
         width: 90vw;
-        height: 100vh;
+        height: 80vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -231,5 +311,24 @@
         width: 50px;
         height: 50px;
         margin-bottom: .5rem;
+    }
+    .contentAboutMe{
+        margin-top: 2rem;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & .ContentAbout{
+            width: 30vw;
+            height: 40vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-top: 1rem;
+        }
+        & .imgDevelop{
+            width: 30vw;
+            height: 40vh;
+        }
     }
 }
