--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -57,6 +57,34 @@
     width: 4.5rem;
     height: 4rem;
 }
+ /*estilos scroll chrome y edge*/ 
+.habilities::-webkit-scrollbar {
+    width: 10px; 
+  }
+  
+  .habilities::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 5px; 
+  }
+  
+  .habilities::-webkit-scrollbar-track {
+    background-color: #f1f1f1; 
+  }
+  
+ /*estilos scroll firefox*/ 
+  .habilities {
+    scrollbar-width: thin; 
+  }
+  
+  .habilities::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 5px; 
+  }
+  
+  .habilities::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  
 
 
 
@@ -341,6 +369,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        & .section{
+            margin-left: 2rem;
+        }
 
         & .contImgHability{
             width: 23vw;
@@ -358,10 +389,23 @@
             margin-left: 5rem;
             width: 33vw;
             height: 35vh;
-            border: solid 2px white;
             flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px;
             & .imgHability{
                 margin: 2rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
             }
         }
     }
