--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -13,10 +13,12 @@
     margin: 1rem 0 1rem 0;
     border: 3px solid white;
 }
+
 #description{text-align: justify;}
 #name{ margin-top: 1rem ; font-size:2rem; }
 #profession{font-size: 1.8rem; text-align: center;}
 .contentDescription{ width: 80vw; margin-top:1rem;}
+
 .contentNetwork{
     display: flex;
     flex-direction: column;
@@ -24,7 +26,7 @@
 .image-container {
     position: relative;
     display: inline-block;
-  }
+}
 .image-name {
     position: absolute;
     top: 50%;
@@ -36,10 +38,10 @@
     border-radius: 5px;
     opacity: 0;
     transition: opacity 0.3s ease;
-  }
+}
 .socialLink:hover + .image-name {
     opacity: 1;
-  }
+}
 
 .contentAboutMe{
     margin-top: 2rem;
@@ -60,34 +62,31 @@
  /*estilos scroll chrome y edge*/ 
 .habilities::-webkit-scrollbar {
     width: 10px; 
-  }
+}
   
-  .habilities::-webkit-scrollbar-thumb {
+.habilities::-webkit-scrollbar-thumb {
     background-color: #888; 
     border-radius: 5px; 
-  }
+}
   
-  .habilities::-webkit-scrollbar-track {
+.habilities::-webkit-scrollbar-track {
     background-color: #f1f1f1; 
-  }
+}
   
  /*estilos scroll firefox*/ 
-  .habilities {
+.habilities {
     scrollbar-width: thin; 
-  }
+}
   
-  .habilities::-webkit-scrollbar-thumb {
+.habilities::-webkit-scrollbar-thumb {
     background-color: #888; 
     border-radius: 5px; 
-  }
+}
   
-  .habilities::-webkit-scrollbar-track {
+.habilities::-webkit-scrollbar-track {
     background-color: #f1f1f1;
-  }
+}
   
-
-
-
 @media (max-width: 480px) {
     #name{ font-size:1.7rem; text-align: center;}
     #profession{font-size: 1.5rem; text-align: center;}
@@ -124,6 +123,140 @@
         }
         & .imgDevelop{
             width: 80vw;
+        }
+    }
+    .contentHabilities{
+        width: 100vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & .section{
+            margin-left: 2rem;
+        }
+
+        & .contImgHability{
+            width: 100vw;
+            height: 40vh;
+            justify-content: center;
+            align-items: center;
+            & .imgHabilities{
+                margin-left: 4rem;
+                width: 70vw;
+                height: 35vh;
+            }
+        }
+        
+        & .habilities{
+            width: 85vw;
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px;
+            & .imgHability{
+                margin: .5rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
+}
+@media (min-width: 481px) and (max-width: 767px) {
+    .contentHome{
+        width: 100vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .contentNetwork{
+        right: 0px;
+        & .socialMedia{
+            width: 30px;
+            height: 30px;
+            margin-bottom: .5rem;
+        }
+    }
+    .socialMediaCv{
+        width: 30px;
+        height: 30px;
+        margin-bottom: .5rem;
+    }
+    .contentAboutMe{
+        margin-top: 2rem;
+        width: 100vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & .ContentAbout{
+            width: 80vw;
+            margin-top: 1rem;
+        }
+        & .imgDevelop{
+            width: 80vw;
+        }
+    }
+    .contentHabilities{
+        width: 100vw;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        & .section{
+            margin-left: 2rem;
+        }
+
+        & .contImgHability{
+            width: 100vw;
+            height: 40vh;
+            justify-content: center;
+            align-items: center;
+            & .imgHabilities{
+                margin-left: 4rem;
+                width: 70vw;
+                height: 35vh;
+            }
+        }
+        
+        & .habilities{
+            width: 85vw;
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px;
+            & .imgHability{
+                margin: .5rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
         }
     }
 }
@@ -177,6 +310,54 @@
             height: 40vh;
         }
     }
+    .contentHabilities{
+        width: 100vw;
+        height: 40vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & .section{
+            margin-left: 2rem;
+        }
+
+        & .contImgHability{
+            width: 30vw;
+            height: 30vh;
+            justify-content: center;
+            align-items: center;
+            & .imgHabilities{
+                margin-left: 3rem;
+                width: 35vw;
+                height: 32vh;
+            }
+        }
+        
+        & .habilities{
+            width: 41vw;
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px; 
+            margin-left: 7rem;
+            & .imgHability{
+                margin: 1.5rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
 }
 @media (min-width: 800px) and (max-width: 899px) {
     .contentHome{
@@ -226,6 +407,54 @@
             height: 40vh;
         }
     }
+    .contentHabilities{
+        width: 100vw;
+        height: 40vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & .section{
+            margin-left: 2rem;
+        }
+
+        & .contImgHability{
+            width: 26vw;
+            height: 30vh;
+            justify-content: center;
+            align-items: center;
+            & .imgHabilities{
+                margin-left: 3rem;
+                width: 29vw;
+                height: 32vh;
+            }
+        }
+        
+        & .habilities{
+            width: 41vw;
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px; 
+            margin-left: 7rem;
+            & .imgHability{
+                margin: 1rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    }
 }
 @media (min-width: 900px) and (max-width: 1024px) {
     .contentHome{
@@ -259,6 +488,54 @@
         width: 40px;
         height: 40px;
         margin-bottom: .5rem;
+    }
+    .contentHabilities{
+        width: 100vw;
+        height: 40vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & .section{
+            margin-left: 2rem;
+        }
+
+        & .contImgHability{
+            width: 24vw;
+            height: 30vh;
+            justify-content: center;
+            align-items: center;
+            & .imgHabilities{
+                margin-left: 3rem;
+                width: 26vw;
+                height: 30vh;
+            }
+        }
+        
+        & .habilities{
+            width: 36vw;
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px; 
+            margin-left: 7rem;
+            & .imgHability{
+                margin: 1.3rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        }
     }
 }
 
@@ -298,6 +575,7 @@
     .contentAboutMe{
         margin-top: 2rem;
         width: 100vw;
+        height: 45vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -308,6 +586,54 @@
         & .imgDevelop{
             width: 30vw;
             height: 40vh;
+        }
+    }
+    .contentHabilities{
+        width: 100vw;
+        height: 40vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        & .section{
+            margin-left: 2rem;
+        }
+
+        & .contImgHability{
+            width: 23vw;
+            height: 30vh;
+            justify-content: center;
+            align-items: center;
+            & .imgHabilities{
+                margin-left: 3.5rem;
+                width: 23vw;
+                height: 35vh;
+            }
+        }
+        
+        & .habilities{
+            width: 36vw;
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            overflow-y: auto; 
+            max-height: 400px; 
+            margin-left: 7rem;
+            & .imgHability{
+                margin: 1.3rem;
+            }
+            & .titleHability{
+                color: black;
+            }
+        }
+        & .images{
+            display: flex;
+            flex-wrap: wrap; 
+            & .imageWrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
         }
     }
 }
@@ -386,14 +712,16 @@
         }
         
         & .habilities{
-            margin-left: 5rem;
-            width: 33vw;
+            width: 31vw;
             height: 35vh;
+            justify-content: center;
+            align-items: center;
             flex-wrap: wrap;
             overflow-y: auto; 
-            max-height: 400px;
+            max-height: 400px; 
+            margin-left: 7rem;
             & .imgHability{
-                margin: 2rem;
+                margin: 1.5rem;
             }
             & .titleHability{
                 color: black;
