--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -19,6 +19,10 @@
 #profession{font-size: 1.8rem; text-align: center;}
 .contentDescription{ width: 80vw; margin-top:1rem;}
 
+.ContentProjects{
+    width: 100vw;
+    height: auto;
+}
 .contentNetwork{
     display: flex;
     flex-direction: column;
@@ -539,10 +543,10 @@
     }
 }
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (min-width: 1025px) and (max-width: 1600px) {
     .contentHome{
         width: 90vw;
-        height: 90vh;
+        height: 95vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -575,7 +579,7 @@
     .contentAboutMe{
         margin-top: 2rem;
         width: 100vw;
-        height: 45vh;
+        height: 30vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -590,7 +594,7 @@
     }
     .contentHabilities{
         width: 100vw;
-        height: 40vh;
+        height: 60vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -600,7 +604,7 @@
 
         & .contImgHability{
             width: 23vw;
-            height: 30vh;
+            height: 35vh;
             justify-content: center;
             align-items: center;
             & .imgHabilities{
@@ -612,7 +616,7 @@
         
         & .habilities{
             width: 36vw;
-            height: 35vh;
+            height: 40vh;
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
@@ -637,10 +641,10 @@
         }
     }
 }
-@media (min-width: 1441px) and (max-width: 1920px) {
+@media (min-width: 1601px) and (max-width: 1920px) {
     .contentHome{
         width: 90vw;
-        height: 80vh;
+        height: 73vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -674,6 +678,7 @@
     .contentAboutMe{
         margin-top: 2rem;
         width: 100vw;
+        height: 50vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -692,6 +697,7 @@
     }
     .contentHabilities{
         width: 100vw;
+        height: 35vh;
         display: flex;
         align-items: center;
         justify-content: center;
