--- a/src/components/StyleComponent.css
+++ b/src/components/StyleComponent.css
@@ -63,7 +63,7 @@
     width: 4.5rem;
     height: 4rem;
 }
- /*estilos scroll chrome y edge*/ 
+ /*estilos scroll de seccion habilidades para chrome y edge*/ 
 .habilities::-webkit-scrollbar {
     width: 10px; 
 }
@@ -77,7 +77,7 @@
     background-color: #f1f1f1; 
 }
   
- /*estilos scroll firefox*/ 
+ /*estilos scroll de seccion habilidades para firefox*/ 
 .habilities {
     scrollbar-width: thin; 
 }
@@ -92,6 +92,7 @@
 }
   
 @media (max-width: 480px) {
+    #description{ font-size: 1.05rem; }
     #name{ font-size:1.7rem; text-align: center;}
     #profession{font-size: 1.5rem; text-align: center;}
     .contentHome{
@@ -131,7 +132,7 @@
     }
     .contentHabilities{
         width: 100vw;
-        height: auto;
+        height:85vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -174,6 +175,25 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+            }
+        }
+    }
+    .ContentProjects{
+        width: 84vw;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        & .card{
+            width: 100vw;
+            height: 56vh;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 2rem;
+            text-align: justify;
+            & .textCard{
+                height: 20vh;   
             }
         }
     }
@@ -262,9 +282,30 @@
                 align-items: center;
             }
         }
+        .ContentProjects{
+            margin-left:1rem ;
+            width: 84vw;
+            height: auto;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            & .card{
+                width: 100vw;
+                height: 54vh;
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 2rem;
+                text-align: justify;
+                & .textCard{
+                    height: 9vh;   
+                }
+            }
+        }
     }
 }
 @media (min-width: 768px) and (max-width: 799px) {
+    #description{ font-size: 1.03rem; }
     .contentHome{
         width: 90vw;
         height: auto;
@@ -362,8 +403,30 @@
             }
         }
     }
+    .ContentProjects{
+        margin-left:1rem ;
+        width: 84vw;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        & .card{
+            width: 100vw;
+            height: 54vh;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 2rem;
+            text-align: justify;
+            & .textCard{
+                height: 9vh;   
+            }
+        }
+    }
 }
 @media (min-width: 800px) and (max-width: 899px) {
+    #description{ font-size: 1.03rem; }
+
     .contentHome{
         width: 90vw;
         height: auto;
@@ -459,8 +522,29 @@
             }
         }
     }
+    .ContentProjects{
+        margin-left:1rem ;
+        width: 80vw;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        & .card{
+            width: 100vw;
+            height: 43vh;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 2rem;
+            text-align: justify;
+            & .textCard{
+                height: 7vh;   
+            }
+        }
+    }
 }
 @media (min-width: 900px) and (max-width: 1024px) {
+    #description{ font-size: 1.03rem; }
     .contentHome{
         width: 90vw;
         height: auto;
@@ -541,9 +625,30 @@
             }
         }
     }
+    .ContentProjects{
+        width: 73vw;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        & .card{
+            width: 100vw;
+            height: 39vh;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 2rem;
+            text-align: justify;
+            & .textCard{
+                height: 6vh;   
+            }
+        }
+    }
 }
 
 @media (min-width: 1025px) and (max-width: 1600px) {
+    
+    #description{ font-size: 1.08rem; }
     .contentHome{
         width: 90vw;
         height: 95vh;
@@ -640,27 +745,47 @@
             }
         }
     }
-}
-@media (min-width: 1601px) and (max-width: 1920px) {
-    .contentHome{
-        width: 90vw;
-        height: 73vh;
+    .ContentProjects{
+        width: 70vw;
+        height: auto;
         display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .contentInfo{
-        width: 90vw;
-        display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        & .contentDescription{width: 60vw;}
+        & .card{
+            width: 30vw;
+            height: 54vh;
+            display: flex;
+            flex-direction: column;
+            margin: 2rem 0rem 2rem 3.5rem;
+            text-align: justify;
+            & .textCard{
+                height: 14vh;   
+            }
+        }
     }
-    .contentDescription{ width: 40vw; height: 30vh;}
-    .photo{
-        width: 25vw;
-        height: 55vh;
+}
+@media (min-width: 1601px) and (max-width: 1921px) {
+
+    #description{ font-size: 1.12rem; }
+    .contentHome{
+        width: 90vw;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        & .contentInfo{
+            width: 90vw;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            & .contentDescription{width: 60vw;}
+        }
+        & .photo{
+            width: 25vw;
+            height: 55vh;
+        }  
     }
     .contentNetwork{
         right: 10px;
@@ -669,16 +794,15 @@
             height: 50px;
             margin-bottom: .5rem;
         }
-    }
-    .socialMediaCv{
+        & .socialMediaCv{
         width: 50px;
         height: 50px;
         margin-bottom: .5rem;
     }
+    }
     .contentAboutMe{
-        margin-top: 2rem;
         width: 100vw;
-        height: 50vh;
+        height: 40vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -697,17 +821,16 @@
     }
     .contentHabilities{
         width: 100vw;
-        height: 35vh;
+        height: 45vh;
         display: flex;
         align-items: center;
         justify-content: center;
         & .section{
             margin-left: 2rem;
         }
-
         & .contImgHability{
             width: 23vw;
-            height: 30vh;
+            height: 35vh;
             justify-content: center;
             align-items: center;
             & .imgHabilities{
@@ -716,7 +839,6 @@
                 height: 35vh;
             }
         }
-        
         & .habilities{
             width: 31vw;
             height: 35vh;
@@ -740,6 +862,25 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+            }
+        }
+    }
+    .ContentProjects{
+        width: 70vw;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        & .card{
+            width: 27vw;
+            height: 50vh;
+            display: flex;
+            flex-direction: column;
+            margin: 2rem 0rem 2rem 3.5rem;
+            text-align: justify;
+            & .textCard{
+                height: 10vh;   
             }
         }
     }
