Se crean las animaciones para los componentes, y la respectiva funcion para que se active la animacion al pasar por cada componente

--- a/src/Style.css
+++ b/src/Style.css
@@ -12,3 +12,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .fade-in.active {
+    opacity: 1;
+  }
